--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,39 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE files
+# VS Code
+.vscode/
+*.code-workspace
+
+# JetBrains IDEs (WebStorm, IntelliJ IDEA)
+.idea/
+*.iml
+*.iws
+*.ipr
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+
+# Sublime Text
+*.sublime-*
+
+# Atom
+.atom/
+
+# Eclipse
+.settings/
+.metadata/
+
+# NetBeans
+nbproject/
+
+# Visual Studio
+*.user
+*.suo
+*.sln.docstates
